--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,7 @@ repos:
       - id: check-executables-have-shebangs
       - id: check-added-large-files
         args: ["--maxkb=500"]
+  - repo: https://github.com/JohnnyMorganz/StyLua
+    rev: 3701d2cb65198ec748d3a593628625be9f91fe27  # frozen: v2.3.1
+    hooks:
+      - id: stylua-github
